<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:id="@+id/sv"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/ll"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/ll1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/rick_and_morty"
                        android:layout_width="160dp"
                        android:layout_height="145dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="30dp"
                        android:contentDescription="@string/rick_and_morty"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/rick_and_morty"
                        android:onClick="launchRickandMorty"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mg_rick_and_morty"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                    android:id="@+id/Luca"
                    android:layout_weight="1"
                    android:layout_width="160dp"
                    android:layout_height="145dp"
                    android:contentDescription="@string/luca"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/app_name"
                    app:srcCompat="@drawable/luca"
                    android:onClick="launchLuca"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mg_luca"
                    android:layout_gravity="center"/>
            </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                    android:id="@+id/awake"
                    android:layout_width="160dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginStart="30dp"
                    android:contentDescription="@string/awake"
                    android:layout_weight="1"
                    app:layout_constraintStart_toStartOf="@+id/rick_and_morty"
                    app:layout_constraintTop_toBottomOf="@+id/rick_and_morty"
                    app:srcCompat="@drawable/awake"
                    android:onClick="launchAwake"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/mg_awake" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <ImageView
                    android:id="@+id/bartkowiak"
                    android:layout_width="160dp"
                    android:layout_height="145dp"
                    android:layout_marginTop="30dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/bartkowiak"
                    app:layout_constraintEnd_toEndOf="@+id/Luca"
                    app:layout_constraintTop_toBottomOf="@+id/Luca"
                    app:layout_constraintStart_toStartOf="@+id/Luca"
                    android:layout_marginEnd="30dp"
                    app:srcCompat="@drawable/bartkowiak"
                    android:onClick="launchBartkowiak"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mg_bartkowiak"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/cruella"
                android:layout_width="160dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/cruella"
                app:layout_constraintStart_toStartOf="@+id/awake"
                app:layout_constraintTop_toBottomOf="@+id/awake"
                app:srcCompat="@drawable/cruella"
                android:onClick="launchCruella"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mg_cruella"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                android:id="@+id/infinite"
                android:layout_width="160dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:contentDescription="@string/infinite"
                app:layout_constraintEnd_toEndOf="@+id/bartkowiak"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/bartkowiak"
                app:srcCompat="@drawable/infinite"
                android:onClick="launchInfinite"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mg_infinite"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                android:id="@+id/ashfall"
                android:layout_width="160dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/ashfall"
                app:layout_constraintStart_toStartOf="@+id/cruella"
                android:layout_weight="1"
                app:layout_constraintTop_toBottomOf="@+id/cruella"
                app:srcCompat="@drawable/ashfall"
                android:onClick="launchAshfall"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mg_infinite"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
            <ImageView
                android:id="@+id/batman"
                android:layout_width="160dp"
                android:layout_height="145dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/batman"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="@+id/infinite"
                android:layout_marginEnd="30dp"
                app:layout_constraintTop_toBottomOf="@+id/infinite"
                app:srcCompat="@drawable/batman"
                android:onClick="launchBatman"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mg_batman"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="rick_and_morty,Luca"
                tools:layout_editor_absoluteY="110dp" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>