<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="com.example.movie.Awake">

    <TextView
        android:id="@+id/movie_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/awake"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/movie_name">

        <ImageView
            android:id="@+id/awake"
            android:layout_width="172dp"
            android:layout_height="212dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/awake"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/awake" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="30dp"
                android:text="@string/mr_awake"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="30dp"
                android:text="@string/rd_awake"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/md_awake"
        android:textSize="15sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>