<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.movie.Luca">

    <LinearLayout
        android:id="@+id/top_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            android:text="back"
            android:onClick="backToMain"/>

        <TextView
            android:id="@+id/movie_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/luca"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_weight="9"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_name"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/medium_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_below="@+id/top_panel">

        <ImageView
            android:id="@+id/luca"
            android:layout_width="172dp"
            android:layout_height="212dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/luca"
            app:layout_constraintStart_toStartOf="@id/top_panel"
            app:layout_constraintTop_toBottomOf="@id/top_panel"
            app:srcCompat="@drawable/luca" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="30dp"
                android:text="@string/mr_luca"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginEnd="30dp"
                android:text="@string/rd_luca"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:typeface="monospace"
                app:layout_constraintEnd_toEndOf="parent" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/medium_panel"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/md_luca"
        android:typeface="monospace"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>